--- a/page-single.html
+++ b/page-single.html
@@ -1057,7 +1057,7 @@
                                             </a>
                                         </div>
                                         <div class="content mini-links">
-                                            <h4><a href="#">Gatdets</a></h4>
+                                            <h4><a href="#">Gadgets</a></h4>
                                             <ul class="flexcol">
                                                 <li><a href="#">Camera</a></li>
                                                 <li><a href="#">Cell Phones</a></li>
