--- a/checkout.html
+++ b/checkout.html
@@ -14,7 +14,7 @@
         <aside class="site-off desktop-hide">
             <div class="off-canvas">
                 <div class="canvas-head flexitem">
-                    <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                    <div class="logo"><a href="/">Cozmo</a></div>
                     <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
                 </div>
                 <div class="departments"></div>
@@ -67,7 +67,7 @@
                     <div class="wrapper flexitem">
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left flexitem">
-                            <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                            <div class="logo"><a href="/">Cozmo</a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="index.html">Home</a></li>
@@ -732,7 +732,7 @@
                     <div class="wrapper">
                         <div class="flexcol">
                             <div class="logo">
-                                <a href=""><span class="circle"></span>.Store</a>
+                                <a href="">Cozmo</a>
                             </div>
                             <div class="socials">
                                 <ul class="flexitem">
