--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <aside class="site-off desktop-hide">
             <div class="off-canvas">
                 <div class="canvas-head flexitem">
-                    <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                    <div class="logo"><a href="/">Cozmo</a></div>
                     <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
                 </div>
                 <div class="departments"></div>
@@ -38,11 +38,11 @@
                                 <li><a href="#">Sign Up</a></li>
                                 <li><a href="#">My Account</a></li>
                                 <li><a href="#">Order Tracking</a></li>
-                                <li><a href="#">USD <span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
+                                <li><a href="#">GBP <span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
                                     <ul>
-                                        <li class="current"><a href="#">USD</a></li>
+                                        <li class="current"><a href="#">GBP</a></li>
                                         <li><a href="#">EURO</a></li>
-                                        <li><a href="#">GBP</a></li>
+                                        <li><a href="#">USD</a></li>
                                         <li><a href="#">IDR</a></li>
                                     </ul>
                                 </li>
@@ -65,7 +65,7 @@
                     <div class="wrapper flexitem">
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left flexitem">
-                            <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                            <div class="logo"><a href="/">Cozmo</a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="index.html">Home</a></li>
@@ -188,7 +188,7 @@
 
                                         <div class="icon-text">
                                             <div class="mini-text">Total</div>
-                                            <div class="cart-total">$0.00</div>
+                                            <div class="cart-total">£0.00</div>
                                         </div>
                                     </a></li>
                             </ul>
@@ -535,8 +535,8 @@
                                             </div>
                                             <h3 class="main-links"><a href="#">Happy Sailed Womens Summer Boho Floral</a></h3>
                                             <div class="price">
-                                                <span class="current">$129.99</span>
-                                                <span class="normal mini-text">$189.98</span>
+                                                <span class="current">£129.99</span>
+                                                <span class="normal mini-text">£189.98</span>
                                             </div>
                                             <div class="stock mini-text">
                                                 <div class="qty">
@@ -575,8 +575,8 @@
                                                 <span class="mini-text">(2,548)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$129.99</span>
-                                                <span class="normal mini-text">$189.98</span>
+                                                <span class="current">£129.99</span>
+                                                <span class="normal mini-text">£189.98</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>2975 sold</p>
@@ -608,8 +608,8 @@
                                                 <span class="mini-text">(1,955)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$56.50</span>
-                                                <span class="normal mini-text">$75.50</span>
+                                                <span class="current">£56.50</span>
+                                                <span class="normal mini-text">£75.50</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>2584 sold</p>
@@ -642,8 +642,8 @@
                                                 <span class="mini-text">(1,559)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$469.99</span>
-                                                <span class="normal mini-text">$755.99</span>
+                                                <span class="current">£469.99</span>
+                                                <span class="normal mini-text">£755.99</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>2151 sold</p>
@@ -675,8 +675,8 @@
                                                 <span class="mini-text">(1,411)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$99.98</span>
-                                                <span class="normal mini-text">$125.98</span>
+                                                <span class="current">£99.98</span>
+                                                <span class="normal mini-text">£125.98</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>1843 sold</p>
@@ -709,8 +709,8 @@
                                                 <span class="mini-text">(2,548)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$129.99</span>
-                                                <span class="normal mini-text">$189.98</span>
+                                                <span class="current">£129.99</span>
+                                                <span class="normal mini-text">£189.98</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>2975 sold</p>
@@ -741,8 +741,8 @@
                                                 <span class="mini-text">(994)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$37.50</span>
-                                                <span class="normal mini-text">$45.50</span>
+                                                <span class="current">£37.50</span>
+                                                <span class="normal mini-text">£45.50</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>1257 sold</p>
@@ -773,8 +773,8 @@
                                                 <span class="mini-text">(543)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$279.99</span>
-                                                <span class="normal mini-text">$499.99</span>
+                                                <span class="current">£279.99</span>
+                                                <span class="normal mini-text">£499.99</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>995 sold</p>
@@ -805,8 +805,8 @@
                                                 <span class="mini-text">(335)</span>
                                             </div>
                                             <div class="price">
-                                                <span class="current">$129.99</span>
-                                                <span class="normal mini-text">$189.98</span>
+                                                <span class="current">£129.99</span>
+                                                <span class="normal mini-text">£189.98</span>
                                             </div>
                                             <div class="mini-text">
                                                 <p>758 sold</p>
@@ -856,8 +856,8 @@
                                         </div>
                                         <h3><a href="#">Under Armour Men's Tech</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.50</span>
-                                            <span class="normal mini-text">$75.50</span>
+                                            <span class="current">£56.50</span>
+                                            <span class="normal mini-text">£75.50</span>
                                         </div>
                                     </div>
                                 </div>
@@ -884,8 +884,8 @@
                                         </div>
                                         <h3><a href="#">Women's Lightweight Knit Hoodie Sweater Pullover</a></h3>
                                         <div class="price">
-                                            <span class="current">$37.50</span>
-                                            <span class="normal mini-text">$45.50</span>
+                                            <span class="current">£37.50</span>
+                                            <span class="normal mini-text">£45.50</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -919,8 +919,8 @@
                                         </div>
                                         <h3><a href="#">Happy Sailed Womens Summer Boho Floral</a></h3>
                                         <div class="price">
-                                            <span class="current">$129.99</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£129.99</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -954,8 +954,8 @@
                                         </div>
                                         <h3><a href="#">Womens Summer Boho Floral</a></h3>
                                         <div class="price">
-                                            <span class="current">$118.90</span>
-                                            <span class="normal mini-text">$189.90</span>
+                                            <span class="current">£118.90</span>
+                                            <span class="normal mini-text">£189.90</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -989,8 +989,8 @@
                                         </div>
                                         <h3><a href="#">Men Slip On Shoes Casual with Arch Support Insoles</a></h3>
                                         <div class="price">
-                                            <span class="current">$80.90</span>
-                                            <span class="normal mini-text">$119.90</span>
+                                            <span class="current">£80.90</span>
+                                            <span class="normal mini-text">£119.90</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1024,8 +1024,8 @@
                                         </div>
                                         <h3><a href="#">Skechers Women's Go Joy Walking Shoe Sneaker</a></h3>
                                         <div class="price">
-                                            <span class="current">$45.95</span>
-                                            <span class="normal mini-text">$64.95</span>
+                                            <span class="current">£45.95</span>
+                                            <span class="normal mini-text">£64.95</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1059,8 +1059,8 @@
                                         </div>
                                         <h3><a href="#">Walking Shoe Sneaker Womens</a></h3>
                                         <div class="price">
-                                            <span class="current">$139.99</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£139.99</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1094,8 +1094,8 @@
                                         </div>
                                         <h3><a href="#">Womens Summer Tosca Shoe</a></h3>
                                         <div class="price">
-                                            <span class="current">$104.90</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£104.90</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1313,7 +1313,7 @@
                     <div class="wrapper">
                         <div class="flexcol">
                             <div class="logo">
-                                <a href=""><span class="circle"></span>.Store</a>
+                                <a href="">Cozmo</a>
                             </div>
                             <div class="socials">
                                 <ul class="flexitem">
@@ -1325,7 +1325,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <p class="mini-text">Copyright 2022 © .Store. All right reserved.</p>
+                        <p class="mini-text">Copyright 2024 © .Store. All right reserved.</p>
                     </div>
                 </div>
             </div>
