--- a/checkout.html
+++ b/checkout.html
@@ -185,18 +185,18 @@
 
                                         <div class="icon-large">
                                             <i class="ri-shopping-cart-line"></i>
-                                            <div class="fly-item"><span class="item-number">5</span></div>
+                                            <div class="fly-item"><span class="item-number">4</span></div>
                                         </div>
 
                                         <div class="icon-text">
                                             <div class="mini-text">Total</div>
-                                            <div class="cart-total">$1,622</div>
+                                            <div class="cart-total">£207.98</div>
                                         </div>
                                     </a>
                                 <div class="mini-cart">
                                     <div class="content">
                                         <div class="cart-head">
-                                            5 items in cart
+                                            4 items in cart
                                         </div>
                                         <div class="cart-body">
                                             <ul class="products mini">
@@ -205,10 +205,10 @@
                                                         <a href="#"><img src="assets/products/home2.jpg" alt=""></a>
                                                     </div>
                                                     <div class="item-content">
-                                                        <p><a href="#">Dimmable Ceiling Light Modern</a></p>
+                                                        <p><a href="#">Leandra Hydro Blue Fabric 3 Seater Sofa</a></p>
                                                         <span class="price">
-                                                            <span>$279.99</span>
-                                                            <span class="fly-item"><span>2x</span></span>
+                                                            <span>£279.99</span>
+                                                            <span class="fly-item"><span>1x</span></span>
                                                         </span>
                                                     </div>
                                                     <a href="" class="item-remove"><i class="ri-close-line"></i></a>
@@ -220,7 +220,7 @@
                                                     <div class="item-content">
                                                         <p><a href="#">Modern Storage Cabinet with Door & 3 Drawers</a></p>
                                                         <span class="price">
-                                                            <span>$129.99</span>
+                                                            <span>£129.99</span>
                                                             <span class="fly-item"><span>2x</span></span>
                                                         </span>
                                                     </div>
@@ -231,10 +231,10 @@
                                                         <a href="#"><img src="assets/products/home4.jpg" alt=""></a>
                                                     </div>
                                                     <div class="item-content">
-                                                        <p><a href="#">Vonanda Velvet Sofa Couch</a></p>
+                                                        <p><a href="#">Leandra Hydro Blue Fabric 3 Seater Sofa</a></p>
                                                         <span class="price">
-                                                            <span>$352.99</span>
-                                                            <span class="fly-item"><span>2x</span></span>
+                                                            <span>£469.99</span>
+                                                            <span class="fly-item"><span>1x</span></span>
                                                         </span>
                                                     </div>
                                                     <a href="" class="item-remove"><i class="ri-close-line"></i></a>
@@ -246,8 +246,8 @@
                                                     <div class="item-content">
                                                         <p><a href="#">Awesome Bed for a Couple</a></p>
                                                         <span class="price">
-                                                            <span>$579.99</span>
-                                                            <span class="fly-item"><span>2x</span></span>
+                                                            <span>£579.99</span>
+                                                            <span class="fly-item"><span>1x</span></span>
                                                         </span>
                                                     </div>
                                                     <a href="" class="item-remove"><i class="ri-close-line"></i></a>
@@ -257,9 +257,9 @@
                                                         <a href="#"><img src="assets/products/home1.jpg" alt=""></a>
                                                     </div>
                                                     <div class="item-content">
-                                                        <p><a href="#">Dimmable Ceiling Light Modern</a></p>
+                                                        <p><a href="#">Nike Pro Training Dri-FIT Tights</a></p>
                                                         <span class="price">
-                                                            <span>$279.99</span>
+                                                            <span>£40.00</span>
                                                             <span class="fly-item"><span>2x</span></span>
                                                         </span>
                                                     </div>
@@ -270,7 +270,7 @@
                                         <div class="cart-footer">
                                             <div class="subtotal">
                                                 <p>Subtotal</p>
-                                                <p><strong>$1,622.95</strong></p>
+                                                <p><strong>£207.98</strong></p>
                                             </div>
                                             <div class="actions">
                                                 <a href="/cart.html" class="primary-button">Checkout</a>
@@ -327,7 +327,7 @@
                                             </a>
                                             <ul>
                                                 <li><a href="#">Camera</a></li>
-                                                <li><a href="#">Cell Phone</a></li>
+                                                <li><a href="#">Mobile Phones</a></li>
                                                 <li><a href="#">Computers</a></li>
                                                 <li><a href="#">GPS & Navigation</a></li>
                                                 <li><a href="#">Headphones</a></li>
@@ -529,9 +529,9 @@
                                             <select name="country" id="country">
                                                 <option value=""></option>
                                                 <option value="1">Germany</option>
-                                                <option value="2">UK</option>
+                                                <option value="2">USA</option>
                                                 <option value="3">Poland</option>
-                                                <option value="4" selected="selected">USA</option>
+                                                <option value="4" selected="selected">UK</option>
                                                 <option value="5">Others</option>
                                             </select>
                                     </p>
@@ -550,10 +550,19 @@
                                 </form>
                                 <div class="shipping-methods">
                                     <h2>Shipping Methods</h2>
-                                    <p class="checkset">
-                                        <input type="radio" checked>
-                                        <label>$5.00 Flate Rate</label>
+                                    <p>
+                                        
+                                        <input type="radio" name="rate-option" id="flat" checked>
+                                        <span>Standard: 5-10 days</span>
+                                        <label for="flat" class="circle"></label>
                                     </p>
+                                    <p>
+                                        
+                                        <input type="radio" name="rate-option" id="best">
+                                        <span>Premium: 1-3 Days</span>
+                                        <label for="best" class="circle"></label>
+                                    </p>
+
                                 </div>
                                 <div class="primary-checkout">
                                     <button class="primary-button">Place Order</button>
@@ -566,19 +575,19 @@
                                         <ul>
                                             <li>
                                                 <span>Subtotal</span>
-                                                <span>$2155.95</span>
+                                                <span>£212.98</span>
                                             </li>
                                             <li>
                                                 <span>Discount</span>
-                                                <span>-$100</span>
+                                                <span>-£15.00</span>
                                             </li>
                                             <li>
-                                                <span>Shipping: Flat</span>
-                                                <span>$10.00</span>
+                                                <span>Shipping</span>
+                                                <span>£10.00</span>
                                             </li>
                                             <li>
                                                 <span>Total</span>
-                                                <strong>$2065.95</strong>
+                                                <strong>£207.98</strong>
                                             </li>
                                         </ul>
                                     </div>
@@ -588,46 +597,46 @@
                                                 <img src="assets/products/home2.jpg" alt="">
                                             </div>
                                             <div class="item-content">
-                                                <p>Dimmable Ceiling Light Modern</p>
+                                                <p>Nike Pro Training Dri-FIT Tights</p>
                                                 <span class="price">
-                                                    <span>$279.00</span>
+                                                    <span>£40.00</span>
+                                                    <span>x 1</span>
+                                                </span>
+                                            </div>
+                                        </li>
+                                        <li class="item">
+                                            <div class="thumbnail object-cover">
+                                                <img src="assets/products/apparel3.jpg" alt="">
+                                            </div>
+                                            <div class="item-content">
+                                                <p>Pink Soda Sport Liberty Crew Sweatshirt</p>
+                                                <span class="price">
+                                                    <span>£35.00</span>
                                                     <span>x 2</span>
                                                 </span>
                                             </div>
                                         </li>
                                         <li class="item">
                                             <div class="thumbnail object-cover">
-                                                <img src="assets/products/home3.jpg" alt="">
+                                                <img src="assets/products/apparel1.jpg" alt="">
                                             </div>
                                             <div class="item-content">
-                                                <p>Dimmable Ceiling Light Modern</p>
+                                                <p>Nike Aries Hoodie</p>
                                                 <span class="price">
-                                                    <span>$279.00</span>
-                                                    <span>x 2</span>
+                                                    <span>£55.00</span>
+                                                    <span>x 1</span>
                                                 </span>
                                             </div>
                                         </li>
                                         <li class="item">
                                             <div class="thumbnail object-cover">
-                                                <img src="assets/products/home4.jpg" alt="">
+                                                <img src="assets/products/apparel2.jpg" alt="">
                                             </div>
                                             <div class="item-content">
-                                                <p>Dimmable Ceiling Light Modern</p>
+                                                <p>New Era MLB New York Yankees 9FORTY Cap</p>
                                                 <span class="price">
-                                                    <span>$279.00</span>
-                                                    <span>x 2</span>
-                                                </span>
-                                            </div>
-                                        </li>
-                                        <li class="item">
-                                            <div class="thumbnail object-cover">
-                                                <img src="assets/products/home5.jpg" alt="">
-                                            </div>
-                                            <div class="item-content">
-                                                <p>Dimmable Ceiling Light Modern</p>
-                                                <span class="price">
-                                                    <span>$279.00</span>
-                                                    <span>x 2</span>
+                                                    <span>£23.99</span>
+                                                    <span>x 3</span>
                                                 </span>
                                             </div>
                                         </li>
@@ -813,10 +822,10 @@
         <div id="modal" class="modal">
             <div class="content flexcol">
                 <div class="image object-cover">
-                    <img src="assets/products/apparel4.jpg" alt="">
+                    <img src="assets/products/apparel8.jpg" alt="">
                 </div>
                 <h2>Get the latest deals and coupons</h2>
-                <p class="mobile-hide">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, quam animi aspernatur quasi voluptatibus laudantium.</p>
+                <p class="mobile-hide">Sign up below to get exclusive updates on new arrivals, trends, and insider deals..</p>
                 <form action="" class="search">
                     <span class="icon-large"><i class="ri-mail-line"></i></span>
                     <input type="mail" placeholder="Your email address">
