--- a/page-single.html
+++ b/page-single.html
@@ -188,7 +188,7 @@
 
                                         <div class="icon-text">
                                             <div class="mini-text">Total</div>
-                                            <div class="cart-total">$0.00</div>
+                                            <div class="cart-total">£0.00</div>
                                         </div>
                                     </a></li>
                             </ul>
@@ -238,7 +238,7 @@
                                             </a>
                                             <ul>
                                                 <li><a href="#">Camera</a></li>
-                                                <li><a href="#">Cell Phone</a></li>
+                                                <li><a href="#">Mobile Phones</a></li>
                                                 <li><a href="#">Computers</a></li>
                                                 <li><a href="#">GPS & Navigation</a></li>
                                                 <li><a href="#">Headphones</a></li>
@@ -468,8 +468,8 @@
                                                     <span class="sku mini-text">SKU-881</span>
                                                 </div>
                                                 <div class="price">
-                                                    <span class="current">$80.90</span>
-                                                    <span class="normal">$119.90</span>
+                                                    <span class="current">£80.90</span>
+                                                    <span class="normal">£119.90</span>
                                                 </div>
                                                 <div class="colors">
                                                     <p>Color</p>
@@ -737,8 +737,8 @@
                                         </div>
                                         <h3><a href="#">Under Armour Men's Tech</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.50</span>
-                                            <span class="normal mini-text">$75.50</span>
+                                            <span class="current">£56.50</span>
+                                            <span class="normal mini-text">£75.50</span>
                                         </div>
                                     </div>
                                 </div>
@@ -763,10 +763,10 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(994)</span>
                                         </div>
-                                        <h3><a href="#">Women's Lightweight Knit Hoodie Sweater Pullover</a></h3>
+                                        <h3><a href="#">New Era MLB New York Yankees 9FORTY Cap</a></h3>
                                         <div class="price">
-                                            <span class="current">$37.50</span>
-                                            <span class="normal mini-text">$45.50</span>
+                                            <span class="current">£23.99</span>
+                                            <span class="normal mini-text">£47.00</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -798,10 +798,10 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(3,459)</span>
                                         </div>
-                                        <h3><a href="#">Happy Sailed Womens Summer Boho Floral</a></h3>
+                                        <h3><a href="#">The North Face Trishull Jacket</a></h3>
                                         <div class="price">
-                                            <span class="current">$129.99</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£110.00</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -833,10 +833,10 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(10)</span>
                                         </div>
-                                        <h3><a href="#">Womens Summer Boho Floral</a></h3>
+                                        <h3><a href="#">The North Face Trishull Jacket</a></h3>
                                         <div class="price">
-                                            <span class="current">$118.90</span>
-                                            <span class="normal mini-text">$189.90</span>
+                                            <span class="current">£118.90</span>
+                                            <span class="normal mini-text">£189.90</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -870,8 +870,8 @@
                                         </div>
                                         <h3><a href="#">Men Slip On Shoes Casual with Arch Support Insoles</a></h3>
                                         <div class="price">
-                                            <span class="current">$80.90</span>
-                                            <span class="normal mini-text">$119.90</span>
+                                            <span class="current">£80.90</span>
+                                            <span class="normal mini-text">£119.90</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -905,8 +905,8 @@
                                         </div>
                                         <h3><a href="#">Skechers Women's Go Joy Walking Shoe Sneaker</a></h3>
                                         <div class="price">
-                                            <span class="current">$45.95</span>
-                                            <span class="normal mini-text">$64.95</span>
+                                            <span class="current">£45.95</span>
+                                            <span class="normal mini-text">£64.95</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -940,8 +940,8 @@
                                         </div>
                                         <h3><a href="#">Walking Shoe Sneaker Womens</a></h3>
                                         <div class="price">
-                                            <span class="current">$139.99</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£139.99</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -975,8 +975,8 @@
                                         </div>
                                         <h3><a href="#">Womens Summer Tosca Shoe</a></h3>
                                         <div class="price">
-                                            <span class="current">$104.90</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£104.90</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1005,7 +1005,7 @@
                                             <img src="assets/banner/banner1.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
-                                            <h3>Brutal Sale!</h3>
+                                            <h3>Massive Sale!</h3>
                                             <h4><span>Get the deal in here</span><br>Living Room Chair</h4>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
@@ -1018,7 +1018,7 @@
                                             <img src="assets/banner/banner2.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
-                                            <h3>Brutal Sale!</h3>
+                                            <h3>Massive Sale!</h3>
                                             <h4><span>Discount everyday</span><br>Office Outfit</h4>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
@@ -1060,7 +1060,7 @@
                                             <h4><a href="#">Gadgets</a></h4>
                                             <ul class="flexcol">
                                                 <li><a href="#">Camera</a></li>
-                                                <li><a href="#">Cell Phones</a></li>
+                                                <li><a href="#">Mobile Phones</a></li>
                                                 <li><a href="#">Computers</a></li>
                                                 <li><a href="#">GPS & Navigation</a></li>
                                                 <li><a href="#">Headphones</a></li>
