--- a/page-offer.html
+++ b/page-offer.html
@@ -188,7 +188,7 @@
 
                                         <div class="icon-text">
                                             <div class="mini-text">Total</div>
-                                            <div class="cart-total">$0.00</div>
+                                            <div class="cart-total">£0.00</div>
                                         </div>
                                     </a></li>
                             </ul>
@@ -238,7 +238,7 @@
                                             </a>
                                             <ul>
                                                 <li><a href="#">Camera</a></li>
-                                                <li><a href="#">Cell Phone</a></li>
+                                                <li><a href="#">Mobile Phones</a></li>
                                                 <li><a href="#">Computers</a></li>
                                                 <li><a href="#">GPS & Navigation</a></li>
                                                 <li><a href="#">Headphones</a></li>
@@ -402,9 +402,9 @@
                         <div class="breadcrumb">
                             <ul class="flexitem">
                                 <li><a href="#">Home</a></li>
-                                <li><a href="#">Women's Fashion</a></li>
+                                <li><a href="#">Mens</a></li>
                                 <li><a href="#">Clothing</a></li>
-                                <li>Happy Sailed Womens Summer Boho Floral</li>
+                                <li>The North Face Trishull Jacket</li>
                             </ul>
                         </div>
                         <!-- breadcrumb -->
@@ -451,7 +451,7 @@
 
                                     <div class="row">
                                         <div class="item">
-                                            <h1>Happy Sailed Womens Summer Boho Floral</h1>
+                                            <h1>The North Face Trishull Jacket</h1>
                                             <div class="content">
                                                 <div class="rating">
                                                     <div class="stars"></div>
@@ -463,8 +463,8 @@
                                                     <span class="sku mini-text">SKU-881</span>
                                                 </div>
                                                 <div class="price">
-                                                    <span class="current">$129.99</span>
-                                                    <span class="normal">$189.99</span>
+                                                    <span class="current">£110.00</span>
+                                                    <span class="normal">£189.99</span>
                                                 </div>
                                                 <!-- <div class="colors">
                                                     <p>Color</p>
@@ -511,19 +511,19 @@
                                                         <form action="">
                                                             <p>
                                                                 <input type="radio" name="size" id="size-40">
-                                                                <label for="size-40" class="circle"><span>40</span></label>
+                                                                <label for="size-40" class="circle"><span>S</span></label>
                                                             </p>
                                                             <p>
                                                                 <input type="radio" name="size" id="size-41">
-                                                                <label for="size-41" class="circle"><span>41</span></label>
+                                                                <label for="size-41" class="circle"><span>M</span></label>
                                                             </p>
                                                             <p>
                                                                 <input type="radio" name="size" id="size-42">
-                                                                <label for="size-42" class="circle"><span>42</span></label>
+                                                                <label for="size-42" class="circle"><span>L</span></label>
                                                             </p>
                                                             <p>
                                                                 <input type="radio" name="size" id="size-43">
-                                                                <label for="size-43" class="circle"><span>43</span></label>
+                                                                <label for="size-43" class="circle"><span>XL</span></label>
                                                             </p>
                                                         </form>
                                                     </div>
@@ -553,17 +553,18 @@
                                                         <li class="has-child expand">
                                                             <a href="#0" class="icon-small">Information</a>
                                                             <ul class="content">
-                                                                <li><span>Brands</span><span>Nike</span></li>
-                                                                <li><span>Activity</span><span>Running</span></li>
-                                                                <li><span>Material</span><span>Fleece</span></li>
+                                                                <li><span>Brands</span><span>NorthFace</span></li>
+                                                                <li><span>Activity</span><span>Outdoor</span></li>
+                                                                <li><span>Material</span><span>Polyster</span></li>
                                                                 <li><span>Gender</span><span>Men</span></li>
                                                             </ul>
                                                         </li>
                                                         <li class="has-child">
                                                             <a href="#0" class="icon-small">Details</a>
                                                             <div class="content">
-                                                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima laborum possimus quo. Excepturi, inventore voluptatum!</p>
-                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, a laudantium accusantium eum impedit nisi laboriosam ex adipisci corrupti porro debitis, reprehenderit quos minus facere.</p>
+                                                                <p>Look this season with this men's Trishull Jacket from The North Face. Bringing retro vibes with the Grey and Black colour block design, this coat is made from lightweight yet durable woven fabric to tackle the elements.
+                                                                   It has an extended full zip front and elasticated cuffs to keep you covered, while zippered pockets secure your essentials in place.
+                                                                   Finished off with the Simple Dome badge to the chest and back. Machine washable. | Our model is 6'0" with a 38" chest and wears a size medium.</p>
                                                             </div>
                                                         </li>
                                                         <li class="has-child">
@@ -640,7 +641,8 @@
                                                                                         <p>Awesome product!</p>
                                                                                     </div>
                                                                                     <div class="review-text">
-                                                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus repellendus hic neque? Quaerat esse rem eum nihil eius omnis qui?</p>
+                                                                                        <p>Only worn the coat a few times but I'm in love with it I would definitely recommend this to anyone looking for a very warm winter jacket.
+                                                                                           The sizing is true to size and the coat fits perfectly. The jacket is very warm and of very good quality. In my opinion this product is worth every single penny.</p>
                                                                                     </div>
                                                                                 </li>
                                                                                 <li class="item">
@@ -655,7 +657,7 @@
                                                                                         <p>Awesome product!</p>
                                                                                     </div>
                                                                                     <div class="review-text">
-                                                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus repellendus hic neque? Quaerat esse rem eum nihil eius omnis qui?</p>
+                                                                                        <p>Great casual and commuting jacket. Love the style and colour</p>
                                                                                     </div>
                                                                                 </li>
                                                                             </ul>
@@ -761,8 +763,8 @@
                                         </div>
                                         <h3><a href="#">Under Armour Men's Tech</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.50</span>
-                                            <span class="normal mini-text">$75.50</span>
+                                            <span class="current">£56.50</span>
+                                            <span class="normal mini-text">£75.50</span>
                                         </div>
                                         <!-- data-stock is product stocks -->
                                         <div class="stock mini-text" data-stock="4000">
@@ -806,10 +808,10 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(994)</span>
                                         </div>
-                                        <h3><a href="#">Women's Lightweight Knit Hoodie Sweater Pullover</a></h3>
+                                        <h3><a href="#">New Era MLB New York Yankees 9FORTY Cap</a></h3>
                                         <div class="price">
-                                            <span class="current">$37.50</span>
-                                            <span class="normal mini-text">$45.50</span>
+                                            <span class="current">£23.00</span>
+                                            <span class="normal mini-text">£47.00</span>
                                         </div>
                                         <div class="stock mini-text" data-stock="4000">
                                             <div class="qty">
@@ -852,10 +854,10 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(3,459)</span>
                                         </div>
-                                        <h3><a href="#">Happy Sailed Womens Summer Boho Floral</a></h3>
+                                        <h3><a href="#">The North Face Trishull Jacket</a></h3>
                                         <div class="price">
-                                            <span class="current">$129.99</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£110.00</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="stock mini-text" data-stock="4000">
                                             <div class="qty">
@@ -898,10 +900,10 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(10)</span>
                                         </div>
-                                        <h3><a href="#">Womens Summer Boho Floral</a></h3>
+                                        <h3><a href="#">The North Face Trishull Jacket</a></h3>
                                         <div class="price">
-                                            <span class="current">$118.90</span>
-                                            <span class="normal mini-text">$189.90</span>
+                                            <span class="current">£118.90</span>
+                                            <span class="normal mini-text">£189.90</span>
                                         </div>
                                         <div class="stock mini-text" data-stock="4000">
                                             <div class="qty">
@@ -937,8 +939,8 @@
                                         </div>
                                         <h3><a href="#">Men Slip On Shoes Casual with Arch Support Insoles</a></h3>
                                         <div class="price">
-                                            <span class="current">$80.90</span>
-                                            <span class="normal mini-text">$119.90</span>
+                                            <span class="current">£80.90</span>
+                                            <span class="normal mini-text">£119.90</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -972,8 +974,8 @@
                                         </div>
                                         <h3><a href="#">Skechers Women's Go Joy Walking Shoe Sneaker</a></h3>
                                         <div class="price">
-                                            <span class="current">$45.95</span>
-                                            <span class="normal mini-text">$64.95</span>
+                                            <span class="current">£45.95</span>
+                                            <span class="normal mini-text">£64.95</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1007,8 +1009,8 @@
                                         </div>
                                         <h3><a href="#">Walking Shoe Sneaker Womens</a></h3>
                                         <div class="price">
-                                            <span class="current">$139.99</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£139.99</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1042,8 +1044,8 @@
                                         </div>
                                         <h3><a href="#">Womens Summer Tosca Shoe</a></h3>
                                         <div class="price">
-                                            <span class="current">$104.90</span>
-                                            <span class="normal mini-text">$189.98</span>
+                                            <span class="current">£104.90</span>
+                                            <span class="normal mini-text">£189.98</span>
                                         </div>
                                         <div class="footer">
                                             <ul class="mini-text">
@@ -1072,7 +1074,7 @@
                                             <img src="assets/banner/banner1.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
-                                            <h3>Brutal Sale!</h3>
+                                            <h3>Massive Sale!</h3>
                                             <h4><span>Get the deal in here</span><br>Living Room Chair</h4>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
@@ -1085,7 +1087,7 @@
                                             <img src="assets/banner/banner2.jpg" alt="">
                                         </div>
                                         <div class="text-content flexcol">
-                                            <h3>Brutal Sale!</h3>
+                                            <h3>Massive Sale!</h3>
                                             <h4><span>Discount everyday</span><br>Office Outfit</h4>
                                             <a href="#" class="primary-button">Shop Now</a>
                                         </div>
@@ -1127,7 +1129,7 @@
                                             <h4><a href="#">Gadgets</a></h4>
                                             <ul class="flexcol">
                                                 <li><a href="#">Camera</a></li>
-                                                <li><a href="#">Cell Phones</a></li>
+                                                <li><a href="#">Mobile Phones</a></li>
                                                 <li><a href="#">Computers</a></li>
                                                 <li><a href="#">GPS & Navigation</a></li>
                                                 <li><a href="#">Headphones</a></li>
