--- a/checkout.html
+++ b/checkout.html
@@ -39,11 +39,11 @@
                                 <li><a href="#">Sign Up</a></li>
                                 <li><a href="#">My Account</a></li>
                                 <li><a href="#">Order Tracking</a></li>
-                                <li><a href="#">USD <span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
+                                <li><a href="#">GBP <span class="icon-small"><i class="ri-arrow-down-s-line"></i></span></a>
                                     <ul>
-                                        <li class="current"><a href="#">USD</a></li>
+                                        <li class="current"><a href="#">GBP</a></li>
                                         <li><a href="#">EURO</a></li>
-                                        <li><a href="#">GBP</a></li>
+                                        <li><a href="#">USD</a></li>
                                         <li><a href="#">IDR</a></li>
                                     </ul>
                                 </li>
